--- a/style.css
+++ b/style.css
@@ -42,6 +42,41 @@ hr {
     color: white;
 }
 
+.linkList {
+    padding-left: 0;
+}
+
+.linkList a {
+    display: flex;
+    /* height: 100%;
+    width: 100%; */
+    text-decoration: none;
+    justify-content: space-around;
+    align-items: center;
+    color: black;
+}
+
+.linkList li {
+    list-style-type: none;
+    padding: 0;
+}
+
+.linkList li div {
+    background-color: #fb6d9c;
+    width: 350px;
+    height: 50px;
+    margin: auto;
+    border-radius: 20px;
+    font-size: 15pt;
+    display: flex;
+    justify-content: center;
+
+}
+
+.logo {
+    height: 40px;
+}
+
 @media only screen and (max-width: 600px) {
     .donationBody {
         width: 350px;
